User page levels update

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.css
@@ -333,10 +333,11 @@
 }
 .community .top .title {
   margin: 0 auto;
-  max-width: calc(840px - 20%);
+  max-width: 840px;
   width: 100%;
   position: relative;
   margin-top: 2%;
+  padding: 0 10%;
 }
 .community .content {
   max-width: 840px;
