--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -320,10 +320,11 @@
 
         .title {
             margin: 0 auto;
-            max-width: ~"calc(840px - 20%)";
+            max-width: 840px;
             width: 100%;
             position: relative;
             margin-top: 2%;
+            padding: 0 10%;
         }
     }
 
