--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
@@ -25,7 +25,9 @@
                 {
                     <li class="level">
                         <div class="title">
-                            <div class="image"></div>
+                            <div class="image">
+                                <img src="@Url.CdnContent("/images/site/gamification_level_" + level.Name + ".png")" alt="Spitball's Schools" />
+                            </div>
                             <div class="name">@level.Name</div>
                         </div>
                         <div class="body">
