Added badges score to ui

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
@@ -18,7 +18,7 @@
                 <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{::user.progress}}"></md-progress-linear>
                 <div class="text">
                     <div class="name ellipsis" ng-bind="::user.name"></div>
-                    <div class="badges">@GamificationResources.Badges</div>
+                    <div class="badges" ng-if="::user.badges">{{::user.badges}} @GamificationResources.Badges</div>
                 </div>
             </div>
             <div class="points" ng-bind="::user.score"></div>
