--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
@@ -26,7 +26,7 @@
                     <li class="level">
                         <div class="title">
                             <div class="image">
-                                <img src="@Url.CdnContent("/images/site/gamification_level_" + level.Name + ".png")" alt="Spitball's Schools" />
+                                <img src="@Url.CdnContent("/images/site/gamification_level_" + level.Name + ".png")" alt="@level.Name" />
                             </div>
                             <div class="name">@level.Name</div>
                         </div>
