Member tabs is done logic

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/UserDetails.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/UserDetails.cshtml
@@ -22,7 +22,7 @@
         </md-button>
         <md-menu-content md-menu-align-target class="md-user-menu">
             <md-menu-item class="user-menu-item">
-                <a class="md-button" ui-sref="user({id:ud.id, name:ud.name})" ga-track-event="['header', 'user activities']">
+                <a class="md-button" ui-sref="user({userId:ud.id, userName:ud.name})" ga-track-event="['header', 'user activities']">
                     <md-icon md-menu-align-target md-svg-icon="t:userMenu"></md-icon>
                     @IndexResources.User
                 </a>
