fixes in design + gamification in user header

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.css
@@ -280,7 +280,7 @@
   display: -ms-flex;
   display: inline-flex;
 }
-.nav-bar .user-md-menu .md-icon-button > span {
+.nav-bar .user-md-menu .md-icon-button .achievements {
   text-transform: none;
   white-space: nowrap;
   overflow: hidden;
@@ -291,9 +291,18 @@
   padding-left: 10px;
   position: relative;
   color: rgba(255, 255, 255, 0.6);
+  font-size: 12px;
+}
+.nav-bar .user-md-menu .md-icon-button .achievements .separator {
+  width: 5px;
+  height: 5px;
+  display: inline-block;
+  margin: 2px 5px;
+  border-radius: 100%;
+  background: rgba(255, 255, 255, 0.6);
 }
 @media (max-width: 767px) {
-  .nav-bar .user-md-menu .md-icon-button > span {
+  .nav-bar .user-md-menu .md-icon-button .achievements {
     display: none;
   }
 }
