--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.less
@@ -302,7 +302,7 @@
                 .displayInlineFlex;
             }
 
-            > span {
+            .achievements {
                 text-transform: none;
                 white-space: nowrap;
                 overflow: hidden;
@@ -313,6 +313,17 @@
                 padding-left: 10px;
                 position: relative;
                 color: rgba(255, 255, 255, 0.6);
+                font-size: 12px;
+
+
+                .separator {
+                    width: 5px;
+                    height: 5px;
+                    display: inline-block;
+                    margin: 2px 5px;
+                    border-radius: 100%;
+                    background: rgba(255, 255, 255, 0.6);
+                }
 
                 @media (max-width: 767px) {
                     display: none;
