--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/UserDetails.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/UserDetails.cshtml
@@ -13,11 +13,15 @@
                 <md-icon md-menu-origin>
                     <user-image class="img-circle" name="ud.name" image="ud.image" width="39" height="39" noremove="true"></user-image>
                 </md-icon>
-                <span ng-bind="::ud.score | megaNumber"></span>&#x25CF;<ng-pluralize count="ud.badges" when="{
+                <div class="achievements">
+                    <span ng-bind="::ud.score | megaNumber"></span>
+                    <span class="separator"></span>
+                    <ng-pluralize count="ud.badges" when="{
                                                                                      'one': '{} @GamificationResources.Badge',
                                                                                      'two': '{} @GamificationResources.Badges',
                                                                                      'other' : '{} @GamificationResources.Badges'
                                                                                      }"></ng-pluralize>
+                </div>
             </div>
         </md-button>
         <md-menu-content md-menu-align-target class="md-user-menu">
