Added achievements to user template

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -702,6 +702,32 @@ md-toast .md-toast-content span {
 .box-nav-bar md-ink-bar {
   background: #ffffff;
 }
+.achievements {
+  text-transform: none;
+  white-space: nowrap;
+  overflow: hidden;
+  -ms-text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  max-width: 130px;
+  padding-right: 10px;
+  position: relative;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 12px;
+}
+.achievements .separator {
+  width: 5px;
+  height: 5px;
+  display: inline-block;
+  margin: 2px 5px;
+  border-radius: 100%;
+  background: rgba(255, 255, 255, 0.6);
+}
+@media (max-width: 767px) {
+  .achievements {
+    display: none;
+  }
+}
 .fade-in-repeat.ng-enter {
   /* standard transition code */
   transition: 1s linear all;
